<resources>

    <string name="app_name">Perguntas_E_Respostas</string>
    <string name="tituloMain">MAIN</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title1">Play</string>
    <string name="title2">Scores</string>
    <string name="title3">Settings</string>
    <string name="botao_jogar">Play</string>
    <string name="botao_score">Scores</string>
    <string name="botao_settings">Settings</string>
    <string name="description_question_marks">desc_question_marks</string>
    <string name="cabecera_main_text">MAIN</string>
    <string name="botao_creditos">Credits</string>
    <string name="cabecera_credits">CREDITS</string>
    <string name="credits_text_1">WHO WANTS TO BE A MILLIONAIRE</string>
    <string name="titulo_play">PLAY</string>
    <string name="titulo_scores">SCORES</string>
    <string name="titulo_settings">SETTINGS</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="menu_main_credits">Credits</string>
    <string name="Nome">Name:</string>
    <string name="inserirNome">our name</string>
    <string name="numHelpsText">Select how many times you can ask for help</string>
    <string name="adicionaFriend">add friend</string>
    <string name="ourFName">our friend name</string>
    <string name="title_activity_local_scores">LocalScores</string>
    <string name="title_activity_friends_scores">FriendsScores</string>
    <string name="local">Local</string>
    <string name="friends">Friends</string>
    <string name="playFor">Play for:</string>
    <string name="numMoney">0</string>
    <string name="forMoney">$</string>
    <string name="questionNr">Question: </string>
    <string name="numPergunta">1</string>
    <string name="hinTpergunta">Question</string>
    <string name="respostaP1">Resposta 1</string>
    <string name="respostaP2">Resposta 2</string>
    <string name="respostaP3">Resposta 3</string>
    <string name="respostaP4">Resposta 4</string>
    <string name="ajudaPhone">Phone</string>
    <string name="ajuda50">50%</string>
    <string name="ajudaAudience">Audience</string>
    <string name="autor">Autor: José Miguel Malaca</string>
    <string name="mail">Mail: jsemaar@inf.upv.es</string>
    <string name="delete">Delete</string>
    
</resources>